# ownLoadBalancer

./: .env  .gitignore  Makefile  config.json  docker-compose.yaml  pyproject.toml
loadbalancer/: Dockerfile  Makefile
loadbalancer/src/: loadbalancer.c  main.c
ownloadbalancer/: backend_server.py  listener.py
ownloadbalancer/algorithms/: algorithms.py
ownloadbalancer/config/: config.py
ownloadbalancer/proxy/: proxy.py
servers/: Dockerfile  server  server.c  server.py
src/: main.c  server.c
tests/: test_algorithms.py  test_config.py  test_listener.py
